--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Qaybaha Kala Duwan ee Bogga</title>
+    <title>Wargees media</title>
     <!-- Bootstrap CSS CDN -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
@@ -113,7 +113,7 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container text-center">
-            <p>&copy; 2024 Boggeyga. Xuquuqda oo dhan way dhawrsan tahay.</p>
+            <p>&copy; 2024 Wargees media. Xuquuqda oo dhan way dhawrsan tahay.</p>
         </div>
     </footer>
 
